transcribe: fix save button bug
margin-top causes the textarea to overlap with the "Save Changes" button
(when transcribing a lengthy document), making the button unclickable.

Removing the CSS property fixes the issue.

Fixes: #1437

--- a/app/assets/stylesheets/sections/page.scss
+++ b/app/assets/stylesheets/sections/page.scss
@@ -211,7 +211,6 @@
   }
   textarea, div.editarea {
     height: calc(100% - 50px);
-    margin-top: 45px;
     resize: none;
     padding: $gapSize / 2;
   }
